--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 body {
 	height: 100vh;
+	padding: 100px;
 	background-image: url(images/background.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -21,11 +22,11 @@ body {
 
 	color: #f7f7f7;
 	font-family: poppins;
+	text-align: center;
 }
 
 #judulContainer {
-	text-align: center;
-	margin-bottom: 10px;
+	margin: 10px 0px 20px 0px;
 	font-family: lato;
 }
 
@@ -46,19 +47,109 @@ body {
 
 #kontenContainer {
 	width: 300px;
-	height: 200px;
-	padding: 15px 10px;
+	height: 250px;
+	padding: 20px;
 	background-color: rgba(100, 100, 100, 0.3);
 	backdrop-filter: blur(10px);
 	border-radius: 10px;
 }
 
-#creditContainer {
-	text-align: center;
+#cekForm {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
 }
 
-#creditContainer a {
+.inputContainer {
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	margin: 15px 0px;
+}
+
+.inputContainer input {
+	width: 300px;
+	padding: 10px 0px;
+	color: #f7f7f7;
+	border: none;
+	background-color: transparent;
+	border-bottom: 1px solid #555;
+	font-size: 14px;
+	font-weight: 300;
+	transition: 300ms ease;
+}
+
+.inputContainer input:focus {
+	outline: none;
+	border-color: #f7f7f7;
+	box-shadow: 0px 1px 0px 0px #f7f7f7;
+}
+
+.inputContainer label {
+	font-size: 18px;
+	position: absolute;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	transition: 300ms ease;
+}
+
+input:focus + label,
+input:not(:placeholder-shown) + label {
+	transform: translateY(-20px);
+}
+
+button {
+	width: 150px;
+	padding: 10px;
+	border-radius: 20px;
+	font-size: 18px;
+	margin-top: 15px;
+	cursor: pointer;
+	border: none;
+}
+
+button:focus {
+	background-color: black;
+	color: white;
+}
+
+#helpContainer {
+	margin-top: 20px;
+	width: 400px;
+}
+
+#creditContainer {
+	margin: 10px 0px 15px 0px;
+}
+
+#creditContainer p {
+	display: flex;
+	justify-content: center;
+}
+
+#creditContainer img {
+	width: 20px;
+	height: 20px;
+	margin: 0px 5px;
+}
+
+#social {
+	display: flex;
+	flex-direction: row;
+}
+
+#social a {
+	display: flex;
 	text-decoration: none;
 	color: #f7f7f7;
-	margin: 2px;
+	margin: 5px 5px 0px 5px;
 }
+
+#social img {
+	width: 25px;
+	height: 25px;
+	margin-right: 3px;
+	background-color: white;
+	border-radius: 100%;
+} 
